tests/error/enum_errors/enum_inheritance.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum(int):
    var = {"x": bool}


MyEnum.compile()
