tests/error/enum_errors/enum_inheritance.err
Error: Unsupported (at $FILE:5:13)
  | 
3 | 
4 | @guppy.enum
5 | class MyEnum(int):
  |              ^^^ Enum inheritance is not supported

Guppy compilation failed due to 1 previous error
